feat: Added runServer task